--- a/Checklists/Resources/Base.lproj/Main.storyboard
+++ b/Checklists/Resources/Base.lproj/Main.storyboard
@@ -25,12 +25,6 @@
                                     <rect key="frame" x="0.0" y="0.0" width="307" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KY6-gh-VYk">
-                                            <rect key="frame" x="34" y="11" width="266" height="22"/>
-                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                         <label opaque="NO" userInteractionEnabled="NO" tag="1001" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="√" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVf-mI-prM">
                                             <rect key="frame" x="4" y="5" width="26" height="34"/>
                                             <constraints>
@@ -40,15 +34,32 @@
                                             <color key="textColor" red="0.015686274510000001" green="0.66274509800000003" blue="0.92156862750000001" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="PHB-lm-ZxP">
+                                            <rect key="frame" x="30" y="3" width="277" height="36.5"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1000" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KY6-gh-VYk">
+                                                    <rect key="frame" x="0.0" y="0.0" width="277" height="20.5"/>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="1002" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Detail" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rQK-fU-m5V">
+                                                    <rect key="frame" x="0.0" y="20.5" width="277" height="16"/>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="13"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="PHB-lm-ZxP" firstAttribute="top" secondItem="bna-yh-uZn" secondAttribute="top" constant="3" id="5Ek-j2-x1R"/>
                                         <constraint firstItem="NVf-mI-prM" firstAttribute="top" secondItem="bna-yh-uZn" secondAttribute="top" constant="5" id="A6t-3I-MR8"/>
-                                        <constraint firstAttribute="bottom" secondItem="KY6-gh-VYk" secondAttribute="bottom" constant="10.5" id="AQ4-bu-fZC"/>
                                         <constraint firstItem="NVf-mI-prM" firstAttribute="leading" secondItem="bna-yh-uZn" secondAttribute="leading" constant="4" id="GmA-P2-CZB"/>
+                                        <constraint firstAttribute="bottom" secondItem="PHB-lm-ZxP" secondAttribute="bottom" constant="4" id="PJc-ff-r7A"/>
                                         <constraint firstAttribute="bottom" secondItem="NVf-mI-prM" secondAttribute="bottom" constant="4.5" id="Z6O-3U-rsd"/>
-                                        <constraint firstItem="KY6-gh-VYk" firstAttribute="leading" secondItem="NVf-mI-prM" secondAttribute="trailing" constant="4" id="lN3-mp-XCy"/>
-                                        <constraint firstAttribute="trailing" secondItem="KY6-gh-VYk" secondAttribute="trailing" constant="7" id="nMr-aL-Rf4"/>
-                                        <constraint firstItem="KY6-gh-VYk" firstAttribute="top" secondItem="bna-yh-uZn" secondAttribute="top" constant="11" id="xcc-dg-nfV"/>
+                                        <constraint firstItem="PHB-lm-ZxP" firstAttribute="leading" secondItem="NVf-mI-prM" secondAttribute="trailing" id="bEX-tM-Zrz"/>
+                                        <constraint firstAttribute="trailing" secondItem="PHB-lm-ZxP" secondAttribute="trailing" id="boz-y7-8k0"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -71,7 +82,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="LDM-dX-hSu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="991.875" y="165.8450704225352"/>
+            <point key="canvasLocation" x="991.20000000000005" y="165.06746626686657"/>
         </scene>
         <!--Title-->
         <scene sceneID="DQb-4a-iek">
@@ -426,7 +437,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="nYR-qR-373"/>
+        <segue reference="GEV-Tr-ny3"/>
         <segue reference="0I3-m4-gIZ"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.015686274509803921" green="0.66274509803921566" blue="0.92156862745098034" alpha="1" colorSpace="calibratedRGB"/>
